Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Cartozinc</title>
+    <meta name="description" content="Cartozinc le seul hermétique rigide en
+    cellulose biodégradable qui remplace le " zinc"="" métal.="" la=""
+    solution="" plus="" écologique="" et="" économique="" que="" le="" "zinc"=""
+    métal."="">
     <meta property="og:title" content="Cartozinc" />
+    <meta property="og:description" content="Cartozinc le seul hermétique rigide
+    en cellulose biodégradable qui remplace le " zinc"="" métal.="" la=""
+    solution="" plus="" écologique="" et="" économique="" que="" le="" "zinc"=""
+    métal."="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -55,14 +63,19 @@
         </header>
         <div class="home-hero">
           <div class="home-container1">
-            <h1 class="home-text">
-              <span class="home-text1">Fiche Technique</span>
-              <span></span>
-            </h1>
+            <h1 class="home-text">Fiche Technique Cartozinc</h1>
             <img
               alt="image"
               src="public/external/fiche%20technique%20cartozinc%20(1)_page-000-1200w.jpeg"
               class="home-image1"
+            />
+          </div>
+          <div class="home-container2">
+            <h1 class="home-text1">Fiche Technique Filtre Fun/3</h1>
+            <img
+              alt="image"
+              src="public/external/fiche%20technique%20fun_3-1200w.jpg"
+              class="home-image2"
             />
           </div>
         </div>
@@ -70,7 +83,7 @@
           <img
             alt="logo"
             src="public/external/logo_et_nom_site.svg"
-            class="home-image2"
+            class="home-image3"
           />
         </footer>
       </div>
