Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
               class="home-image1"
             />
           </div>
+        </div>
+        <div class="home-hero1">
           <div class="home-container2">
             <h1 class="home-text1">Fiche Technique Filtre Fun/3</h1>
             <img
