Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
       data-tag="font"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css"
+    />
   </head>
   <body>
     <link rel="stylesheet" href="./style.css" />
@@ -81,11 +85,33 @@
             />
           </div>
         </div>
+        <div class="home-hero2">
+          <div class="home-container3">
+            <h1 class="home-text2">
+              Email Attestant de la conformité du Cartozinc
+            </h1>
+            <img
+              alt="image"
+              src="public/external/email_laurence_cate_conformite%C3%AC%C2%81_cartozinc-min-1200w.jpg"
+              class="home-image3"
+            />
+          </div>
+        </div>
+        <div class="home-hero3">
+          <div class="home-container4">
+            <h1 class="home-text3">Agrément Ministériel filtre</h1>
+            <img
+              alt="image"
+              src="public/external/agrement_ministeriel-min-1200w.jpeg"
+              class="home-image4"
+            />
+          </div>
+        </div>
         <footer class="home-footer">
           <img
             alt="logo"
             src="public/external/logo_et_nom_site.svg"
-            class="home-image3"
+            class="home-image5"
           />
         </footer>
       </div>
