Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </h1>
             <img
               alt="image"
-              src="public/external/email_laurence_cate_conformite%C3%AC%C2%81_cartozinc-min-1200w.jpg"
+              src="public/external/email_laurence_cate_conformite_cartozinc_min-1200w.jpg"
               class="home-image3"
             />
           </div>
