Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="home-hero2">
           <div class="home-container3">
             <h1 class="home-text2">
-              Email Attestant de la conformité du Cartozinc
+              Email Attestant de la conformité de Cartozinc
             </h1>
             <img
               alt="image"
