Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -107,11 +107,38 @@
             />
           </div>
         </div>
+        <div class="home-hero4">
+          <div class="home-container5">
+            <h1 class="home-text4">Code AHM 333 - IATA</h1>
+            <img
+              alt="image"
+              src="public/external/iata-compressed-1200w.jpeg"
+              class="home-image5"
+            />
+          </div>
+        </div>
+        <div class="home-hero5">
+          <div class="home-container6">
+            <h1 class="home-text5">Certificat de conformité Cartozinc</h1>
+            <a
+              href="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/e272d315-3cdc-4df4-bb5d-7459a76b0cbb/41204436-26cb-45eb-803e-8357fb3a1e5b?org_if_sml=1&amp;q=80&amp;force_format=original"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="home-link"
+            >
+              <img
+                alt="image"
+                src="public/external/certificat%20de%20conformite%C3%AC%C2%81%20cartozinc_compressed-1200w.jpeg"
+                class="home-image6"
+              />
+            </a>
+          </div>
+        </div>
         <footer class="home-footer">
           <img
             alt="logo"
             src="public/external/logo_et_nom_site.svg"
-            class="home-image5"
+            class="home-image7"
           />
         </footer>
       </div>
