Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -68,21 +68,35 @@
         <div class="home-hero">
           <div class="home-container1">
             <h1 class="home-text">Fiche Technique Cartozinc</h1>
-            <img
-              alt="image"
-              src="public/external/fiche%20technique%20cartozinc%20(1)_page-000-1200w.jpeg"
-              class="home-image1"
-            />
+            <a
+              href="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/e272d315-3cdc-4df4-bb5d-7459a76b0cbb/333c5c4a-3146-4762-beb0-29d8fdd64ea2?org_if_sml=1&amp;q=80&amp;force_format=original"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="home-link"
+            >
+              <img
+                alt="image"
+                src="public/external/fiche%20technique%20cartozinc%20(1)_page-000-1200w.jpeg"
+                class="home-image1"
+              />
+            </a>
           </div>
         </div>
         <div class="home-hero1">
           <div class="home-container2">
             <h1 class="home-text1">Fiche Technique Filtre Fun/3</h1>
-            <img
-              alt="image"
-              src="public/external/fiche%20technique%20fun_3-1200w.jpg"
-              class="home-image2"
-            />
+            <a
+              href="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/e272d315-3cdc-4df4-bb5d-7459a76b0cbb/66e1a18a-a9a4-470d-8df2-250a30200e6c?org_if_sml=1&amp;force_format=original"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="home-link1"
+            >
+              <img
+                alt="image"
+                src="public/external/fiche%20technique%20fun_3-1200w.jpg"
+                class="home-image2"
+              />
+            </a>
           </div>
         </div>
         <div class="home-hero2">
@@ -90,41 +104,69 @@
             <h1 class="home-text2">
               Email Attestant de la conformité de Cartozinc
             </h1>
-            <img
-              alt="image"
-              src="public/external/email_laurence_cate_conformite_cartozinc_min-1200w.jpg"
-              class="home-image3"
-            />
+            <a
+              href="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/e272d315-3cdc-4df4-bb5d-7459a76b0cbb/c7182542-104f-411c-9edb-c5c46c424b6b?org_if_sml=1&amp;force_format=original"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="home-link2"
+            >
+              <img
+                alt="image"
+                src="public/external/email_laurence_cate_conformite_cartozinc_min-1200w.jpg"
+                class="home-image3"
+              />
+            </a>
           </div>
         </div>
         <div class="home-hero3">
           <div class="home-container4">
             <h1 class="home-text3">Agrément Ministériel filtre</h1>
-            <img
-              alt="image"
-              src="public/external/agrement_ministeriel-min-1200w.jpeg"
-              class="home-image4"
-            />
+            <a
+              href="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/e272d315-3cdc-4df4-bb5d-7459a76b0cbb/d6a5d70d-b305-44af-a4d4-608e04c29fc6?org_if_sml=1&amp;q=80&amp;force_format=original"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="home-link3"
+            >
+              <img
+                alt="image"
+                src="public/external/agrement_ministeriel-min-1200w.jpeg"
+                class="home-image4"
+              />
+            </a>
           </div>
         </div>
         <div class="home-hero4">
           <div class="home-container5">
             <h1 class="home-text4">Code AHM 333 - IATA</h1>
-            <img
-              alt="image"
-              src="public/external/iata-compressed-900w.jpeg"
-              class="home-image5"
-            />
+            <a
+              href="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/e272d315-3cdc-4df4-bb5d-7459a76b0cbb/e42ed869-f5c2-4e72-b381-0f831aed9023?org_if_sml=1&amp;q=80&amp;force_format=original"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="home-link4"
+            >
+              <img
+                alt="image"
+                src="public/external/iata-compressed-900w.jpeg"
+                class="home-image5"
+              />
+            </a>
           </div>
         </div>
         <div class="home-hero5">
           <div class="home-container6">
             <h1 class="home-text5">Certificat de conformité Cartozinc</h1>
-            <img
-              alt="image"
-              src="public/external/certificat%20de%20conformite%C3%AC%C2%81%20cartozinc_compressed-1200w.jpeg"
-              class="home-image6"
-            />
+            <a
+              href="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/e272d315-3cdc-4df4-bb5d-7459a76b0cbb/f638122e-7f81-4872-925f-73b20ddc8270?org_if_sml=1&amp;q=80&amp;force_format=original"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="home-link5"
+            >
+              <img
+                alt="image"
+                src="public/external/certificat%20de%20conformite%C3%AC%C2%81%20cartozinc_compressed-1200w.jpeg"
+                class="home-image6"
+              />
+            </a>
           </div>
         </div>
         <footer class="home-footer">
