Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             >
               <img
                 alt="image"
-                src="public/external/certificat%20de%20conformite%C3%AC%C2%81%20cartozinc_compressed-1200w.jpeg"
+                src="public/external/certificat_confo_cartozinc.jpeg-1200w.jpg"
                 class="home-image6"
               />
             </a>
